# zimmer_gripper_urdf

./: CMakeLists.txt  UGLY_FINGER.STL  UR20_GRIPPER_PLATE.STL  UR20_GRIPPER_PLATE_VISUAL.STL  ZIMMER_SLIDE.STL  package.xml
ZIMMER_GRIPPER_URDF/: CMakeLists.txt  package.xml
ZIMMER_GRIPPER_URDF/meshes/: CAMERA_MOUNT.STL  MOUNT_PLATE.STL  MOUNT_PLATE_VISUAL.STL  PRETTY_FINGER.STL  UGLY_FINGER.STL
ZIMMER_GRIPPER_URDF/urdf/: zimmer_gripper.urdf  zimmy_grippy.urdf
meshes/: PRETTY_FINGER.STL  SLIDE_FINGER.STL  UGLY_FINGER.STL  UR20_CAMERA.STL  UR20_CAMERA_VISUAL_CUTOUTS.STL  UR20_CAMERA_VISUAL_FRAME.STL  UR20_CAMERA_VISUAL_FRAME2.STL  UR20_CAMERA_VISUAL_GLASS.STL  UR20_FINGER.STL  UR20_GRIPPER_PLATE.STL  UR20_GRIPPER_PLATE_VISUAL.STL  UR20_MOUNT_PLATE.STL  UR20_MOUNT_VISUAL.STL  ZIMMER_BOX.STL
urdf/: better_grippy.urdf  zimmer_gripper.urdf
